--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,16 @@
     "builds":[
         {
             "src":"./api/(.*)",
-            "destination":"/api"
+            "use":"@vercel/node"
         }
     ]
+    .{
+  "routes": [
+    {
+    { "src": "/api/.*", 
     
+    "dest": "/api/"
+}
+  ]
+}
 }
