--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,14 @@
             "src":"./api/(.*)",
             "use":"@vercel/node"
         }
-    ]
-    .{
+    ],
+    
   "routes": [
     {
-    { "src": "/api/.*", 
+     "src": "/api/.*", 
     
     "dest": "/api/"
-}
+    }
   ]
-}
+
 }
